<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="DUT_cfgBombas" Id="{65fb900d-f12f-49b7-a611-8ab05b912550}">
    <Declaration><![CDATA[TYPE DUT_cfgBombas :
STRUCT
	//Essa DUT tem os dados de configuração de cada bomba
	Apex	:INT;	//Modelo da bomba - Apex 10, apex 15, apex 20 e apex 28
	VazaoNominal	:REAL;	//Em ml/s
	Kp				:REAL;	//Parâmetro de sintonia do PID
	Ti				:REAL;	//Parametro de sintonia do PID
	BandaMorta		:REAL;	//Parâmetro de sintonia do PID
	OutMin			:REAL;	//Saída mínima do PID
	OutMax			:REAL;	//Saída máxima do PID
	PvMin			:REAL;	//Valor mínimo da variável de processo
	PvMax			:REAL;	//Valor máximo da variável de processo
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>